testData/org/rustidea/editor/unclosedQuotes.rs
#![cfg=<error descr="empty char literal"><error descr="unclosed char literal">'</error></error>
]
#![cfg=<error descr="unclosed string literal">"</error>
]
#![cfg=<error descr="empty byte literal"><error descr="unclosed byte literal">b'</error></error>
]
#![cfg=<error descr="unclosed byte string literal">b"</error>
]
